--- a/destinyapi/style.css
+++ b/destinyapi/style.css
@@ -15,9 +15,7 @@ html {
   max-width: 1200px;
   margin: 0 auto;
 }
-
 h1 {
-  text-align: center;
   padding: 1.5rem 2.5rem;
   background-image: linear-gradient(120deg, #fbc2eb 0%, #a6c1ee 100%);
   margin: 0 0 2rem 0;
@@ -35,4 +33,9 @@ img {
 p {
   padding: 0 2.5rem 2.5rem;
   margin: 0;
+}
+marquee {
+  margin: 0 auto;
+  text-align: center;
+  width:  300px;
 }
