--- a/destinyapi/style.css
+++ b/destinyapi/style.css
@@ -5,25 +5,28 @@
 html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Dosis', sans-serif;
+  font-family: 'Verdana', sans-serif;
   line-height: 1.6;
   color: #666;
   background: #F6F6F6;
 }
 
 #root {
-  max-width: 1200px;
+  max-width: 500px;
   margin: 0 auto;
 }
-h1 {
-  padding: 1.5rem 2.5rem;
-  background-image: linear-gradient(120deg, #fbc2eb 0%, #a6c1ee 100%);
-  margin: 0 0 2rem 0;
-  font-size: 1.5rem;
-  color: white;
+.container {
+  background-color: #ecd044;
 }
-
-img {
+h1.title-text {
+  background-image: linear-gradient(120deg, #ecd044 0%, #e6e0d8 100%);
+  /* margin: 0 0 2rem 0; */
+  /* padding: 1.5rem 2.5rem; */
+  font-size: 1.3rem;
+  color: white;
+  width: 75%;
+}
+img.logo {
   display: block;
   margin: 1rem auto;
   width:  500px;
@@ -33,6 +36,20 @@ img {
 p {
   padding: 0 2.5rem 2.5rem;
   margin: 0;
+}
+.icon {
+  height: 75px;
+  width: 75px;
+}
+.icon, .title-text {
+  display: inline-block;
+}
+.icon, .title-text {
+  margin: 10px;
+  vertical-align: top;
+}
+.span-text{
+  display: block;
 }
 marquee {
   margin: 0 auto;
